--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git",
+    "bignumber.js": "^4.1.0",
     "crypto-js": "^3.1.4",
     "utf8": "^2.1.1",
     "xhr2": "*",
